--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd backend && node server.js\" \"cd frontend && npm start\" ",
-    "build": "concurrently \"cd backend && npm i\" \"cd frontend && npm i\" \"npm i\""
+    "build": "concurrently \"npm i\" \"cd backend && npm i\" \"cd frontend && npm i\""
   },
   "author": "",
   "license": "ISC",
