--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm i && cd frontend && npm i && cd ../backend && npm i",
-    "start": "concurrently \"cd backend && node server.js\" \"cd frontend && npm start\" "
+    "start": "concurrently \"cd frontend && npm start\" \"cd backend && node server.js\" "
   },
   "author": "",
   "license": "ISC",
